<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_bg"
    android:backgroundTint="#80000000"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".ChooseLoginActivity"
    android:padding="35dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="169dp"
        android:layout_height="146dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/app_icon"/>

    <Button
        android:id="@+id/intro_customer"
        style="@style/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rectangle1"
        android:text="@string/customer"
        android:padding="20dp"
        android:layout_marginTop="140dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/intro_Restaurant"
        style="@style/sign_up"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="@drawable/rectangle_signup"
        android:text="@string/restaurant"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/intro_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_for_now"
        style="@style/skip_for_no"
        android:layout_gravity="center"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:focusable="true" />
</LinearLayout>